# CMakeList.txt : CMake project for own-stdstring-implementation-cpp, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (own-stdstring-implementation-cpp "main.cpp"  "xstring.hpp" "xstring.cpp")

# TODO: Add tests and install targets if needed.
